| Summary: | ASTERISK-22722: ARI: GET/DELETE /playback/{invalid-id} has response validation failure. | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2013-10-16 15:48:54 | Date Closed: | 2013-10-29 06:16:13 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | SVN 12.0.0-beta1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The playback GET and DELETE operations return code validation fails. They need to allow 404 as a valid return code. | ||
| Comments: | |||